# Bejeweled

./: CMakeLists.txt  caboutdlg.ui  cconfigdao.cpp  cgamedlg.cpp  cgamedlg.h  cmusicplayer.cpp  cmusicplayer.h  crankdao.cpp  cthemedlg.h  main.cpp  resource.qrc
res/: res.qrc
